--- a/styles/cart.css
+++ b/styles/cart.css
@@ -336,7 +336,7 @@
     }
     
     .cart-toggle {
-        right: 15px;
+        right: 50%;
         top: auto;
         bottom: 20px;
     }
@@ -361,6 +361,13 @@
         min-width: 25px;
         font-size: 14px;
     }
+
+    .roll-card-content {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        display: flex;
+    }
 }
 
 @media (max-width: 320px) {
@@ -376,7 +383,7 @@
         width: 50px;
         height: 50px;
         font-size: 24px;
-        right: 10px;
+        right: 50%;
         bottom: 15px;
     }
     
@@ -442,5 +449,11 @@
     #cart-btn {
         padding: 10px;
         font-size: 15px;
+    }
+
+    #product-container {
+        width: 100%;
+       margin-left: -10px;
+
     }
 }
