--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ main {
     max-width: 1440px;
     width: 100%;
     box-sizing: border-box;
+    align-items: flex-start;
 }
 
 body {
@@ -43,7 +44,7 @@ h1 {
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
     gap: 20px;
     flex: 1;
-    padding: 20px;
+    padding: 0;
 }
 
 .roll-card {
@@ -328,7 +329,7 @@ footer {
     #product-container {
         width: 100%;
         grid-template-columns: 1fr;
-        padding: 10px;
+        padding: 0;
     }
     
     .roll-card {
@@ -379,8 +380,13 @@ footer {
         width: 100%;
         height: 200px;
     }
+
+    .roll-card-content {
+        align-items: center;
+        justify-content: space-between;
+    }
     
-    .product-container {
+    #product-container {
         gap: 15px;
         display: flex;
         flex-direction: column;
@@ -462,8 +468,5 @@ footer {
         font-size: 14px;
     }
     
-    #cart-container {
-        padding: 10px;
-        width: 90%;
-    }
+   
 }
