--- a/styles/cart.css
+++ b/styles/cart.css
@@ -427,7 +427,7 @@
     left: 50%;
     transform: translateX(-50%);
     right: auto;
-     height: 580px;
+    height:80%;
 
   }
 
@@ -444,7 +444,7 @@
         display: flex;
         right: auto;
         margin: 0 20px;
-        height: 590px;
+       height:80%;
 
     }
 
